@@ -1,1 +1,3 @@
 SUBDIRS = man1 man3
+
+EXTRA_DIST = CMakeLists.txt
